--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "csv-parser": "^3.2.0",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "firebase": "^11.3.0",
     "fs": "^0.0.1-security",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.475.0",
